@@ -1,5 +1,6 @@
-2013/06/28
+2013/06/28: IGAS v40
     1. Improve the System.Widget.Unit.IFResurrect, make sure its objects will be hidden when the resurrection is over
+    2. Fix the System.Widget.Unit.LevelLabel, refresh when the LevelFormat is changed
 
 2013/06/27: IGAS v39
     1. Delete the custom event system from System.Object.
